# toolit-azure-devops-trunk-based-branching

./: LICENSE  README.md  pyproject.toml
src/: bugfix_or_hotfix.md  create_branch.py  create_new_task_in_devops.py  create_pr.py  pull_request_template.md  run_remote_pipelines.py
